--- a/Pagina web/estilos.css
+++ b/Pagina web/estilos.css
@@ -74,61 +74,47 @@ body {
    list-style: none;
    margin-right: 1%;
 }
-
-
-
-.responsive {
-    height: 80px;
-    width: 100%;
-    background-color:red ;
-}
-.responsivelink {
-   position: absolute;
-   padding: 20px 5px;
+.checkbtn {
+   display: none;
 }
 .logo {
-   height: 40px;
-}
-.ul {
-   float: right;
-}
-.li_enlaces2 {
-   margin-top: 7%;
-   display: inline-block;
-}
-.enlaces2 {
-   color:#ffffff;
-   text-transform: uppercase;
-}
-.li_enlaces2.active, .li_enlaces2:hover{
-   background: #000090;
-   transition:.5s;
-}
-.checkbtn {
-   font-size: 30px;
-   color:#fff;
-   float: right;
-   line-height: 80px;
-   margin-right: 40px;
-   cursor: pointer;
    display: none;
 }
 #check {
    display: none;
 }
 
-
-
-nav ul li {
-display: inline-block;
-line-height: 80px;
-margin: 0 5px;
-}
-
-
 @media (max-width: 900px) {
-.responsive {
+.checkbtn {
+   display: inline;
+   margin-left: 5%;
+}
+.fas {
+   color:#FFFFFF;
+}
+.li_enlaces {
    display: none;
+}
+.li_topheader {
+   display: none;
+}
+.ul_topheader {
+   margin-left: 28%;
+}
+.facebook {
+   display: none;
+}
+.twitter {
+   display: none;
+}
+.fas:hover .li_enlaces, .li_topheader {
+   display: inline;
+}
+.fas:hover, .fas {
+   display: none;
+}
+.instagram1 {
+   
 }
 }
 
