--- a/Pagina web/estilos.css
+++ b/Pagina web/estilos.css
@@ -68,13 +68,19 @@ body {
    display: flex;
    float: right;
    list-style: none;
-   margin-right: 1%;
+   margin-right: 1.5%;
 }
 .facebook {
    display: flex;
    float: right;
    list-style: none;
-   margin-right: 1%;
+   margin-right: 1.5%;
+}
+.twitter2 {
+   display: none;
+}
+.facebook2 {
+   display: none;
 }
 .checkbtn {
    display: none;
@@ -82,46 +88,6 @@ body {
 #check {
    display: none;
    transition: .5s;
-}
-
-@media (max-width: 900px) {
-.checkbtn {
-   display: block;
-   margin: 1.5% 0% 0% 4%;
-   transition-delay: 0ms;
-   transition: 1s;
-   width: 0;
-}
-.fas {
-   color:#FFFFFF;
-}
-.ul_general {
-   display: block;
-   transition-duration: 1.5s;
-   transition-delay: 0ms;
-   transition-property: all;
-   margin-top: -100%;
-}
-.li_topheader {
-   width: 0;
-}
-.twitter {
-   transition: .5s;
-}
-.facebook {
-   transition: .5s;
-}
-
-
-#check:checked ~ .ul_general, .li_enlaces, .li_topheader {
-   display: block;
-   margin: 6% 0 2% 3%;
-}
-#check:checked ~ .checkbtn {
-   transition: .5s;
-   margin: 5% 0 0 6%;
-}
-
 }
 
 /*** HEADER ***/
@@ -276,8 +242,7 @@ hr {
    text-align: center;
 }
 .redes {
-   display: inline-flex;
-   justify-content: center;
+   display: inline;
    margin-bottom: 5%;
 }
 .redestitulo {
@@ -288,14 +253,16 @@ hr {
    color: #5e3ad4;
 }
 .instagram1 {
-   display: block;
-   text-align: center;
-   margin-bottom: 5%;
+   display: inline;
+   padding-left: 3%;
+   margin-bottom: 7%;
+   margin-right: 3%;
 }
 .instagram2 {
-   display: block;
-   justify-content: center;
-   margin-bottom: 5%;
+   display: inline;
+   padding-right: 3%;
+   margin-bottom: 7%;
+   margin-left: 3%;
 }
 
 
@@ -309,3 +276,145 @@ hr {
    padding-top: 1%;
    padding-bottom: 1%;
 }
+
+ /*** MEDIA ***/
+
+ @media (max-width: 900px) {
+   .checkbtn {
+      display: block;
+      margin: 0% 0% 0% 4%;
+      transition-delay: 0ms;
+      transition: 1s;
+      width: 0;
+   }
+   .topheader {
+      padding-top: 4%;
+      padding-bottom: 6%;
+      transition-delay: 0ms;
+      transition: 1s;
+   }
+   .fas {
+      color:#FFFFFF;
+   }
+   .twitter {
+      display: none;
+   }
+   .facebook {
+      display: none;
+   }
+   .twitter2 {
+      display: inline;
+      float: right;
+      margin-top: 0.5%;
+      margin-right: 2%;
+   }
+   .facebook2 {
+      display: inline;
+      float: right;
+      margin-top: 0.5%;
+      margin-right: 2.5%;
+   }
+   
+   .ul_general {
+      display: block;
+      margin-top: -200%;
+   }
+   .li_topheader {
+      width: 0;
+   }
+   #check:checked ~ .ul_general, .li_enlaces, .li_topheader {
+      display: block;
+      margin: 6% 0 2% 3%;
+   }
+   #check:checked ~ .checkbtn {
+      transition: .5s;
+      margin: 5% 0 0 6%;
+   }
+   #check:checked ~ .desplegable, .li_desplegable, .ul_desplegable {
+      background-color:#070a1f;
+   }
+   }
+   @media (max-width: 800px) {
+   .topheader {
+      zoom: 90%;
+   }
+   .header1 {
+      zoom: 80%;
+   }
+   .sobresection {
+      zoom: 90%;
+   }
+   .aside {
+      zoom: 90%;
+   }
+   .twitter2 {
+      zoom: 90%;
+   }
+   .facebook2 {
+      zoom: 90%;
+   }
+   .contacto {
+      zoom: 90%;
+   }
+   .footer {
+      zoom: 90%;
+   }
+   }
+   @media (max-width: 650px) {
+   .topheader {
+      zoom: 80%;
+   }
+   .header1 {
+      zoom: 70%;
+   }
+   .sobresection {
+      zoom: 75%;
+   }
+   .aside {
+      zoom: 80%;
+   }
+   .checkbtn {
+      zoom: 80%;
+   }
+   .twitter2 {
+      zoom: 75%;
+   }
+   .facebook2 {
+      zoom: 75%;
+   }
+   .contacto {
+      zoom: 80%;
+   }
+   .footer {
+      zoom: 80%;
+   }
+   }
+   @media (max-width: 500px) {
+   .topheader {
+      zoom: 75%;
+   }
+   .header1 {
+      zoom: 60%;
+   }
+   .sobresection {
+      zoom: 60%;
+   }
+   .aside {
+      zoom: 70%;
+   }
+   .checkbtn {
+      zoom: 70%;
+   }
+   .twitter2 {
+      zoom: 65%;
+   }
+   .facebook2 {
+      zoom: 65%;
+   }
+   .contacto {
+      zoom: 70%;
+   }
+   .footer {
+      zoom: 70%;
+   }
+   }
