--- a/freshIdeas/estilos.css
+++ b/freshIdeas/estilos.css
@@ -8,7 +8,7 @@ body {
    margin-left: 20%;
    margin-right: 20%;
    background-color: #ff7b2d;
-   font-family:
+   font-family: Arial, Helvetica, sans-serif;
 }
 
 .title {
