--- a/Pagina Web/estilos2.css
+++ b/Pagina Web/estilos2.css
@@ -1,9 +1,10 @@
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
- }
+   padding: 0;
+   margin: 0;
+   box-sizing: border-box;
+   max-width: 100%;
+}
 
  body {
    background-color: #FFFFFF;
@@ -297,10 +298,66 @@
    
    }
  
-/*** @media ZOOM ***/
+/*** @media RESPONSIVE ***/
 
-@media (max-width: 750px) {
+/*** RESPONSIVE PARA TABLET ***/
 
+@media (max-width: 1024px) {
+
+   .checkbtn {
+      display: block;
+      margin: 0% 0% 0% 4%;
+      transition-delay: 0ms;
+      transition: 1s;
+      width: 0;
+   }
+   .topheader {
+      padding-top: 4%;
+      padding-bottom: 5.5%;
+   }
+   .fas {
+      color:#FFFFFF;
+   }
+   .ul_general {
+      display: block;
+      margin-top: -200%;
+   }
+   .li_topheader {
+      width: 0;
+   }
+   .twitter {
+      display: none;
+   }
+   .facebook {
+      display: none;
+   }
+   .twitter2 {
+      display: inline;
+      float: right;
+      margin-right: 1%;
+   }
+   .facebook2 {
+      display: inline;
+      float: right;
+      margin-right: 1%;
+   }
+   #check:checked ~ .ul_general, .li_enlaces, .li_topheader {
+      display: block;
+      margin: 6% 0 2% 3%;
+   }
+   #check:checked ~ .checkbtn{
+      transition: .5s;
+      margin: 5% 0 0 6%;
+   }
+      
+   }
+   
+   /*** @media ZOOM ***/
+   
+   /*** RESPONSIVE PARA TABLET MINI ***/
+   
+   @media (max-width: 850px) {
+   
    .fas {
       zoom: 90%;
    }
@@ -319,9 +376,6 @@
    .sobresection {
       zoom: 90%;
    }
-   .sobresection2 {
-      zoom: 90%;
-   }
    .clases {
       zoom: 90%;
    }
@@ -343,7 +397,7 @@
    
    }
    
-   @media (max-width: 600px) {
+   @media (max-width: 650px) {
    
    .twitter2 {
       zoom: 85%;
@@ -360,20 +414,17 @@
    .sobresection {
       zoom: 80%;
    }
-   .sobresection2 {
+   .clases {
       zoom: 80%;
    }
-   .clases {
-      zoom: 75%;
-   }
    .clases_mid {
-      zoom: 75%;
+      zoom: 80%;
    }
    .clasestitulo {
-      zoom: 75%;
+      zoom: 80%;
    }
    .redestitulo {
-      zoom: 75%;
+      zoom: 80%;
    }
    .contacto {
       zoom: 80%;
@@ -384,7 +435,10 @@
       
    }
    
+   /*** RESPONSIVE PARA MOVIL ***/
+   
    @media (max-width: 500px) {
+   
    .fas {
       zoom: 80%;
    }
@@ -403,20 +457,17 @@
    .sobresection {
       zoom: 70%;
    }
-   .sobresection2 {
+   .clases {
       zoom: 70%;
    }
-   .clases {
-      zoom: 65%;
-   }
    .clases_mid {
-      zoom: 65%;
+      zoom: 70%;
    }
    .clasestitulo {
-      zoom: 65%;
+      zoom: 70%;
    }
    .redestitulo {
-      zoom: 65%;
+      zoom: 70%;
    }
    .contacto {
       zoom: 70%;
