--- a/freshIdeas/estilos.css
+++ b/freshIdeas/estilos.css
@@ -5,45 +5,47 @@
    box-sizing: border-box;
 }
 body {
-   background-color: #ff7b2d;
+   margin-left: 10%;
+   margin-right: 10%;
+   background-color: white;
    font-family: Arial, Helvetica, sans-serif;
-}
-
-.title {
-   margin-top: 0.5%;
-   color: #FFFFFF;
-   font-family: sans-serif;
-   padding-bottom: 1%;
-   padding-top: 1%;
 }
 
 /*** TOPHEADER MENU NAV ***/
 
-.listenlaces {
-   padding-left: 2%;
-   display: inline-block;
-}
-
 .topheader {
-   padding-top: 1%;
-   padding-bottom: 1%;
-   background-color: #2e2e2e;
+   display: inline-block;
+   height: max-content;
+   width: 100%;
+   padding-top:1%;
+   padding-bottom: 2%;
+   padding-right: 2%;
+   background-color: white;
    font-family: sans-serif;
 }
+.logo {
+   display: inline;
+   float: left;
+}
+.ul_enlaces {
+   display: inline;
+   padding: 2%;
+   background-color: black;
+}
+.listenlaces {
+   display: inline;
+}
 .enlaces {
-   display: inline-block;
    color: #FFFFFF;
    text-decoration: none;
 }
-.enlaces:hover {
-   color: #00c3ff;
+.listenlaces:hover {
+   background-color: #00c3ff;
 }
 
 /*** HEADER ***/
 
 .header1 {
-   margin-top: 5px;
-   margin-bottom: 5px;
    background: linear-gradient(#c2f9ff,#00b7ff, #c2f9ff);
    text-align: left;
    font-family: Tahoma;
@@ -60,9 +62,8 @@ main {
 
 /*** ASIDE BARRA LATERAL ***/
 
-aside.categorias {
+.barralateral {
    height: fit-content;
-   margin-bottom: 5px;
    background-color: #ffffff;
    padding-right: 4%;
    font-variant: small-caps;
@@ -86,68 +87,37 @@ aside.categorias {
 
 /*** SECTION CAMISETAS ***/
 
-section.principal {
+.principal {
    height: fit-content;
    width: fit-content;
-   margin-left: 5px;
-   margin-bottom: 5px;
    background-color: #ffffff;
    padding: 3%;
 }
-.h3_principal {
-   border-radius: 10px;
-   padding: 2%;
-   background-color: #b5ecff;
-}
-.camisetasbloque {
-   text-align: center;
-}
-.camisetas {
-   display: inline-block;
-   margin: 3%;
-   border: solid 10px #01a0bc;
-   padding: 2%;
-}
-.bordeimg {
-   list-style:none;
-}
-.images {
-   list-style:none;
-}
-.textimg {
-   color: #00b7ff;
-}
-.textimg:hover {
-   color: red;
-}
-.buynow {
-   padding-top: 10%;
-}
 
-
-
-article p.texto {
-   padding-top: 2%;
-}
-
-.cart {
-   padding-top: 5%;
-}
-.payments {
-   padding-top: 5%;
-   float: right;
-}
 
 /*** FOOTER ***/
 
-footer p.footer {
+.footer {
+   display: inline-block;
+   height: max-content;
+   width: 100%;
+   background-color: black;
+}
+.footer_text1 {
+   display: inline;
+   float: left;
    font-size: 90%;
    color: #f2f2f2;
-   background-color: #2e2e2e;
+   text-align: left;
+   padding: 1%;
+   margin-left: 10%;
+}
+.footer_text2 {
+   display: inline;
+   float: right;
+   font-size: 90%;
+   color: #f2f2f2;
    text-align: right;
    padding: 1%;
-}
-
-footer a {
-   color: grey;
+   margin-right: 10%;
 }
