--- a/freshIdeas/estilos.css
+++ b/freshIdeas/estilos.css
@@ -8,37 +8,34 @@ body {
    margin-left: 15%;
    margin-right: 15%;
    background-color: white;
-   font-family: Arial, Helvetica, sans-serif;
+   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 /*** TOPHEADER MENU NAV ***/
 
 .topheader {
    display: inline;
-   position: absolute;
-   width: 100%;
-   margin-top: 2%;
    background-color: white;
-   font-family: sans-serif;
 }
 .logo {
-   display: inline;  
+   display: inline;
 }
 .ul_enlaces {
-   display: inline;
-   padding: 1%;
+   float: right;
+   padding: 15px;
+   margin-top: 15px;
    background-color: black;
 }
 .listenlaces {
-   display: inline
+   display: inline;
 }
 .enlaces {
    color: #FFFFFF;
    text-decoration: none;
-   padding: 1%;
+   padding: 16px;
 }
 .enlaces:hover {
-   background-color: yellow;
+   background-color: #ffcc33;
 }
 
 /*** HEADER ***/
@@ -63,18 +60,25 @@ main {
    width: fit-content;
 }
 
-/*** ASIDE BARRA LATERAL ***/
+/*** SECTION CAMISETAS ***/
+
+.services {
+   height: fit-content;
+   width: fit-content;
+}
+
+/*** ASIDE BARRA LATERAL NEWS ***/
 
 .news {
    height: fit-content;
    background-color: #ffffff;
 }
-
-/*** SECTION CAMISETAS ***/
-
-.principal {
-   height: fit-content;
-   width: fit-content;
+time {
+   padding: 10px;
+   background-color: #ffcc33;
+}
+.article_news {
+   display: inline-block;
 }
 
 
