--- a/Lenguaje de Marcas/freshIdeas/css/estilos.css
+++ b/Lenguaje de Marcas/freshIdeas/css/estilos.css
@@ -7,7 +7,7 @@
 body {
    margin-left: 15%;
    margin-right: 15%;
-   background-color: #e7e7e7;
+   background-image: url(../images/bg.png);
    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
