--- a/Lenguaje de Marcas/Pagina Web/estilos.css
+++ b/Lenguaje de Marcas/Pagina Web/estilos.css
@@ -19,6 +19,11 @@ body {
    align-items: center;
    width: 100%;
    height: 100%;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   overflow: visible;
+   z-index: 1;
 }
 
 .fondo {
@@ -30,6 +35,7 @@ body {
    background-color: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(7px);
    transition: 0.5s ease-in-out;
+   transition-delay: 0.25s;
    z-index: 1;
 }
 
@@ -43,16 +49,22 @@ body {
 }
 
 #registro:target {
-   display: inline;
+   display: flex;
 }
 
 #cerrar:target {
    display: none;
 }
 
+.X {
+   width: 20px;
+   height: 20px;
+   cursor: pointer;
+}
+
 .cerrar {
-   top: -12px;
-   right: 0px;
+   top: 0;
+   right: 12px;
    display: inline;
    position: absolute;
    margin-top: 12px;
@@ -63,13 +75,6 @@ body {
    color: #fff;
    cursor: pointer;
    font-size: 15px;
-   padding: 12px;
- }
-
- .X {
-   background-image: url(images/X.png);
-   width: 16px;
-   height: 16px;
  }
 
 .form-container {
@@ -140,8 +145,11 @@ body {
 }
 
 .registrarse {
+   display: block;
    margin-top: 15px;
    background-color: #5e3ad4;
+   text-decoration: none;
+   text-align: center;
    border: none;
    border-radius: 4px;
    color: #fff;
@@ -154,12 +162,12 @@ body {
    transition-delay: 0.25s;
 }
 
-.submit-btn:hover {
+.registrarse:hover {
    background-color: #412796;
 }
 
-.cerrar:hover ~ .X{
-   background-image: url(images/X-N.png);
+.submit-btn:hover {
+   background-color: #412796;
 }
 
 /*** MENU TOPHEADER ***/
@@ -293,7 +301,7 @@ body {
    border: black;
    margin-left: 22%;
    margin-right: 10%;
-   z-index: 3;
+   z-index: 99;
 }
 .boton:hover {
    background-color: #412796;
