--- a/Lenguaje de Marcas/Pagina Web/estilos2.css
+++ b/Lenguaje de Marcas/Pagina Web/estilos2.css
@@ -6,10 +6,175 @@
    max-width: 100%;
 }
 
- body {
+body {
    background-color: #FFFFFF;
    font-family: Arial, Helvetica, sans-serif;
+}
+
+/*** INICIAR SESION ***/
+
+.container {
+   display: none;
+   position: fixed;
+   justify-content: center;
+   align-items: center;
+   width: 100%;
+   height: 100%;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   overflow: visible;
+   z-index: 999;
+}
+
+.fondo {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background-color: rgba(0, 0, 0, 0.5);
+   backdrop-filter: blur(7px);
+   transition: 0.5s ease-in-out;
+   transition-delay: 0.25s;
+   z-index: 1;
+}
+
+.contenido {
+  position: relative;
+  z-index: 2;
+}
+
+.form-container {
+   background-color: #050715;
+   border-radius: 8px;
+   box-shadow: 0 0 20px 1px #ffffff;
+   padding: 50px;
+   width: 650px;
+   max-width: 100%;
+}
+
+.form-container h1 {
+   color: white;
+   font-size: 30px;
+   font-weight: 700;
+   margin-bottom: 32px;
+   margin-top: 30px;
+   text-align: center;
+}
+
+.form-group {
+   margin-bottom: 24px;
+}
+
+.form-group label {
+   display: block;
+   color: white;
+   font-size: 16px;
+   font-weight: 700;
+   margin-bottom: 8px;
+}
+
+.form-group label {
+   display: block;
+   color: white;
+   font-size: 16px;
+   font-weight: 700;
+   margin-bottom: 8px;
+}
+
+.form-group input {
+   background-color: transparent;
+   border: none;
+   border-bottom: 1px solid white;
+   color: #ffffff;
+   font-size: 16px;
+   padding: 10px 0;
+   width: 100%;
+}
+
+.form-group input:focus {
+   outline: none;
+   border-bottom-color: white;
+}
+
+.submit-btn {
+   background-color: #5e3ad4;
+   border: none;
+   border-radius: 4px;
+   color: #fff;
+   cursor: pointer;
+   font-size: 18px;
+   font-weight: 700;
+   padding: 12px;
+   width: 100%;
+   transition: background-color 0.25s ease-in-out;
+   transition-delay: 0.1s;
+}
+
+.X {
+   width: 25px;
+   height: 25px;
+   cursor: pointer;
+}
+
+.cerrar {
+   top: 0;
+   right: 12px;
+   display: inline;
+   position: absolute;
+   margin-top: 12px;
+   text-align: center;
+   border: none;
+   text-decoration: none;
+   border-radius: 8px;
+   color: #fff;
+   cursor: pointer;
+   font-size: 15px;
+   transition: transform 0.25s ease-out;
  }
+
+.registrarse {
+   display: block;
+   margin-top: 15px;
+   background-color: #5e3ad4;
+   text-decoration: none;
+   text-align: center;
+   border: none;
+   border-radius: 4px;
+   color: #fff;
+   cursor: pointer;
+   font-size: 18px;
+   font-weight: 700;
+   padding: 12px;
+   width: 100%;
+   transition: background-color 0.25s ease-in-out;
+   transition-delay: 0.1s;
+}
+
+.registrarse:hover {
+   background-color: #412796;
+}
+
+.submit-btn:hover {
+   background-color: #412796;
+}
+
+#mostrar:target {
+   display: flex;
+}
+
+#registro:target {
+   display: flex;
+}
+
+#cerrar:target {
+   display: none;
+}
+
+#cerrar:hover {
+   transform: scale(1.2);
+}
  
 /*** MENU TOPHEADER ***/
 
@@ -64,6 +229,19 @@
 
 .li_topheader:hover > .ul_desplegable {
    display:block;
+}
+.iniciar_sesion {
+   display: inline;
+   float: right;
+   font-size: 80%;
+   font-family: Verdana, Geneva, Tahoma, sans-serif;
+   color: #FFFFFF;
+   background:#5e3ad4;
+   text-decoration: none;
+   border: none;
+   margin-right: 2%;
+   padding: 7px 12px;
+   cursor: pointer;
 }
 .twitter {
    display: flex;
