--- a/Lenguaje de Marcas/Pagina Web/estilos.css
+++ b/Lenguaje de Marcas/Pagina Web/estilos.css
@@ -134,7 +134,6 @@ body {
  }
 
 .registrarse {
-   display: block;
    margin-top: 15px;
    background-color: #5e3ad4;
    text-decoration: none;
@@ -146,6 +145,19 @@ body {
    font-size: 18px;
    font-weight: 700;
    padding: 12px;
+   width: 100%;
+   transition: background-color 0.25s ease-in-out;
+   transition-delay: 0.1s;
+}
+
+.cuenta_p {
+   display: block;
+   margin-top: 24px;
+   text-decoration: none;
+   text-align: center;
+   border: none;
+   color: #fff;
+   font-size: 18px;
    width: 100%;
    transition: background-color 0.25s ease-in-out;
    transition-delay: 0.1s;
@@ -188,6 +200,8 @@ body {
 .li_enlaces {
    display: inline-block;
    color: #FFFFFF;
+   text-decoration: none;
+   list-style: none;
    margin-left: 5%;
 }
 .enlaces {
@@ -200,6 +214,7 @@ body {
 }
 .li_topheader {
    display: inline-block;
+   color: #FFFFFF;
    text-decoration: none;
    list-style: none;
    margin-left: 5%;
@@ -488,9 +503,6 @@ hr {
    display: block;
    margin-top: -200%;
 }
-.li_topheader {
-   width: 0;
-}
 .twitter {
    display: none;
 }
@@ -519,7 +531,7 @@ hr {
 }
 
 /*** @media ZOOM ***/
-
+   
 /*** RESPONSIVE PARA TABLET MINI ***/
 
 @media (max-width: 850px) {
