--- a/Lenguaje de Marcas/Pagina Web/estilos.css
+++ b/Lenguaje de Marcas/Pagina Web/estilos.css
@@ -3,7 +3,7 @@
    padding: 0;
    margin: 0;
    box-sizing: border-box;
-   max-width: 100%
+   max-width: 100%;
 }
 body {
    background-color: #FFFFFF;
