--- a/Lenguaje de Marcas/Pagina Web/css/estilos.css
+++ b/Lenguaje de Marcas/Pagina Web/css/estilos.css
@@ -136,17 +136,14 @@ body {
 
 .registrarse {
    margin-top: 15px;
-   background-color: #5e3ad4;
-   text-decoration: none;
    text-align: center;
-   border: none;
-   border-radius: 4px;
    color: #fff;
    cursor: pointer;
    font-size: 18px;
+   text-decoration-color:grey;
+
+   border: none;
    font-weight: 700;
-   padding: 12px;
-   width: 100%;
    transition: background-color 0.25s ease-in-out;
    transition-delay: 0.1s;
 }
@@ -165,7 +162,7 @@ body {
 }
 
 .registrarse:hover {
-   background-color: #412796;
+   text-decoration-color: #FFFFFF;
 }
 
 .submit-btn:hover {
@@ -292,7 +289,7 @@ html {
 /*** HEADER ***/
 
 .header1 {
-   background-image: url("images/fondo.jpg");
+   background-image: url("../images/fondo.jpg");
    background-attachment: fixed;
    background-size: cover;
    color: #FFFFFF;
@@ -396,7 +393,7 @@ hr {
 }
 .fotoinfo {
    width: 100%;
-   background-image: url("images/fondosobre.jpg");
+   background-image: url("../images/fondosobre.jpg");
    background-attachment: fixed;
    background-size: cover;
    background-repeat: no-repeat;
