--- a/Lenguaje de Marcas/Pagina Web/css/estilos2.css
+++ b/Lenguaje de Marcas/Pagina Web/css/estilos2.css
@@ -136,17 +136,13 @@ body {
 
 .registrarse {
    margin-top: 15px;
-   background-color: #5e3ad4;
-   text-decoration: none;
    text-align: center;
-   border: none;
-   border-radius: 4px;
    color: #fff;
    cursor: pointer;
    font-size: 18px;
+   text-decoration-color:grey;
+   border: none;
    font-weight: 700;
-   padding: 12px;
-   width: 100%;
    transition: background-color 0.25s ease-in-out;
    transition-delay: 0.1s;
 }
@@ -165,7 +161,7 @@ body {
 }
 
 .registrarse:hover {
-   background-color: #412796;
+   text-decoration-color: #FFFFFF;
 }
 
 .submit-btn:hover {
