--- a/Lenguaje de Marcas/Pagina Web/css/estilos.css
+++ b/Lenguaje de Marcas/Pagina Web/css/estilos.css
@@ -160,6 +160,12 @@ body {
    transition-delay: 0.1s;
 }
 
+#error_message {
+   color: #FFFFFF;
+   margin-top: 18px;
+   margin-bottom: 20px;
+}
+
 .registrarse:hover {
    text-decoration-color: #FFFFFF;
 }
